<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">带我走</string>
    <string name="title_section1">逛街</string>
    <string name="title_section2">百分百大学生</string>
    <string name="title_section3">大挑战</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_account">用户</string>
    <string name="action_settings">Settings</string>

    <string name="login_prompt">登录</string>
    <string name="account_username_hint">用户名</string>
    <string name="account_password_hint">密码</string>
    <string name="login_hint_prompt">用户名/Email</string>
    <string name="account_email_hint">电子邮件</string>
    <string name="account_login">登录</string>
    <string name="account_register">注册</string>

    <string name="pavilion_prompt">我的楼阁</string>
    <string name="go_login_prompt">去登录?</string>
    <string name="nickname_prompt">给自己一个昵称</string>
    <string name="my_info_prompt">个人信息</string>

    <string name="login_fail_prompt">登录失败</string>
    <string name="register_fail_prompt">注册失败</string>


</resources>
