<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/spacing_major">

            <com.takemeaway.view.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_minor"
                app:floatLabelTextAppearance="@style/TextAppearance.TakeMeAway.FloatLabel">

                <EditText
                    android:id="@+id/edit_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_prompt"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_password"
                    android:singleLine="true" />

            </com.takemeaway.view.FloatLabelLayout>

            <com.takemeaway.view.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_minor"
                app:floatLabelTextAppearance="@style/TextAppearance.TakeMeAway.FloatLabel">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.takemeaway.view.FloatLabelLayout>

            <com.takemeaway.view.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_minor"
                app:floatLabelTextAppearance="@style/TextAppearance.TakeMeAway.FloatLabel">

                <AutoCompleteTextView
                    android:id="@+id/actv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_email_hint"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:visibility="gone" />

            </com.takemeaway.view.FloatLabelLayout>

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_major"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/account_login" />

                <RadioButton
                    android:id="@+id/rb_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_register" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_submit"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_login" />
    </LinearLayout>

</LinearLayout>